# Kodgen

Kodgen/: CMakeLists.txt
Kodgen/Examples/CppProperties/: CMakeLists.txt
Kodgen/Examples/CppProperties/Generator/Include/DataState/: DataPCG.hpp  DataStateCGE.hpp  DataStateCGM.hpp  DataStateCGU.hpp  DataStateCGUS.hpp
Kodgen/Examples/CppProperties/Generator/Source/: main.cpp
Kodgen/Examples/CppProperties/Include/: SomeClass.h  SomeOtherClass.h
Kodgen/Examples/CppProperties/Source/: main.cpp
Kodgen/Include/Kodgen/CodeGen/: CodeGenManager.h  CodeGenManager.inl  CodeGenUnit.h  EGenerationStrategies.h
Kodgen/Include/Kodgen/CodeGen/Macro/: MacroCodeGenUnit.h
Kodgen/Source/CodeGen/: CodeGenManager.cpp  CodeGenUnit.cpp
Kodgen/Source/CodeGen/Macro/: MacroCodeGenUnit.cpp
Kodgen/Source/Misc/: CompilerHelpers.cpp
